[tool.poetry]
name = "cdp-langchain"
version = "0.0.7"
description = "CDP Agentkit Langchain Extension"
authors = ["John Peterson <john.peterson@coinbase.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["coinbase", "sdk", "crypto", "cdp", "agentkit", "ai", "agent", "langchain", "toolkit"]
packages = [{ include = "cdp_langchain" }]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.4"
langchain-openai = "^0.2.4"
langgraph = "^0.2.39"
cdp-sdk = "^0.10.3"
pydantic = "^2.0"
cdp-agentkit-core = "^0.0.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
python-lsp-server = "^1.12.0"
ruff-lsp = "^0.0.58"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
mypy = "^1.13.0"
sphinx = "^8.0.2"
sphinx-autobuild = "^2024.9.19"
sphinxcontrib-napoleon = "^0.7"
sphinx-autodoc-typehints = "^2.4.4"
myst-parser = "^4.0.0"
cdp-agentkit-core = { path = "../cdp-agentkit-core", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["./build/**", "./dist/**", "./docs/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["D213", "D203", "D100", "D104", "D107", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["cdp_agentkit_core", "cdp_langchain", "cdp"]
